--- a/.github/workflows/mac-cmake-flang-mpich2.yml
+++ b/.github/workflows/mac-cmake-flang-mpich2.yml
@@ -63,23 +63,24 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: HDFGroup/hdf5
+        path: hdf5
  
     - name: Configure
       shell: bash    
       run: |
-        export PATH="/Users/runner/work/hdf5/hdf5/install/bin:$PATH"
-        export LDFLAGS="-L/Users/runner/work/hdf5/hdf5/install/lib"
-        export CPPFLAGS="-I/Users/runner/work/hdf5/hdf5/install/include"
-        export CFLAGS="-I/Users/runner/work/hdf5/hdf5/install/include"
+        cd hdf5      
+        export PATH="/Users/runner/work/actions/actions/install/bin:$PATH"
+        export LDFLAGS="-L/Users/runner/work/actions/actions/install/lib"
+        export CPPFLAGS="-I/Users/runner/work/actions/actions/install/include"
+        export CFLAGS="-I/Users/runner/work/actions/actions/install/include"
         find .
         find ..
         export FC="$(which flang-new)"
         export CC="$(which clang)"
         echo $CC
         echo $FC
-        rm -rf "${{ runner.workspace }}/hdf5/build"
-        mkdir "${{ runner.workspace }}/hdf5/build"
-        cd "${{ runner.workspace }}/hdf5/build"
+        mkdir build
+        cd  build
         cmake ${{ matrix.generator }} \
         -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
         -DCMAKE_TOOLCHAIN_FILE=${{ matrix.toolchain }} \
@@ -98,11 +99,11 @@ jobs:
 
     - name: Build
       run: cmake --build . --config ${{ matrix.build_type }}
-      working-directory: ${{ runner.workspace }}/build
+      working-directory: ${{ runner.workspace }}/hdf5/build
 
     - name: Test
       run: ctest --build . -C ${{ matrix.build_type }} -V
-      working-directory: ${{ runner.workspace }}/build
+      working-directory: ${{ runner.workspace }}/hdf5/build
 
     - name: Upload
       uses: actions/upload-artifact@v2
