--- a/.github/workflows/arm64-r.yml
+++ b/.github/workflows/arm64-r.yml
@@ -1,8 +1,8 @@
-name: arm64 auto
+name: arm64 r
 
 on:
   push:
-    branches: main-
+    branches: [develop]
 
 jobs:
   test: # make sure the action works on a clean machine without building
@@ -24,25 +24,22 @@ jobs:
         uses: cross-platform-actions/action@v0.19.1
         env:
           FOO: A
-          BAR: B
+          BAR: B        
         with:
-          environment_variables: FOO BAR
+          environment_variables: FOO BAR        
           operating_system: ${{ matrix.os.name }}
           architecture: ${{ matrix.os.architecture }}
           version: '${{ matrix.os.version }}'
-          shell: bash
+          shell: bash          
           run: |
             sudo pkg_add git
-            sudo pkg_add autoconf-2.71
-            sudo pkg_add automake-1.16.5
-            sudo pkg_add libtool-2.4.2p2
-            git clone https://github.com/HDFGroup/hdf5
+            git clone https://github.com/hyoklee/hdf5
             cd hdf5
-            export AUTOCONF_VERSION=2.71
-            export AUTOMAKE_VERSION=1.16
-            ls /usr/local/bin/
-            export HDF5_LIBTOOL=/usr/local/bin/libtoolize
-            ./autogen.sh
-            ./configure
-            make
-            make check
+            sudo pkg_add cmake
+            mkdir build
+            cd build
+            cmake -DCMAKE_BUILD_TYPE=Release \
+            -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF ..
+            ctest -T Build --output-on-error -j
+            ctest -T Test --output-on-error -j
+
