ci: use setup-forran

--- a/.github/workflows/spack_cmake.yml
+++ b/.github/workflows/spack_cmake.yml
@@ -31,7 +31,11 @@ jobs:
         sudo apt-get install -q -y libncurses6
         sudo apt-get install -q -y libxml2-dev
         sudo apt-get install -q -y openssl
-        sudo apt-get isntall -q -y gfortran-13
+    - name: Install Fortran
+      uses: fortran-lang/setup-fortran@v1
+      with:
+        compiler: gcc
+        version: 13	
     - name: Run spack install hdf5
       run: |
         . ./spack/share/spack/setup-env.sh
