--- a/.github/workflows/win-icx-ifx.yml
+++ b/.github/workflows/win-icx-ifx.yml
@@ -4,14 +4,14 @@ on:
   push:
     branches:
       - main
-
 jobs:
   build:
     runs-on: windows-latest
     steps:
       - name: Install CMake and Ninja
         uses: lukka/get-cmake@latest
-        cmakeVersion: "3.27.0"
+        with:
+          cmakeVersion: "3.27.6"
       - name: Install LLVM and Clang
         uses: KyleMayes/install-llvm-action@v1
         with:
@@ -21,38 +21,18 @@ jobs:
         with:
           compiler: intel
           version: '2023.2'
-      - name: Install Intel MPI
-        uses: mpi4py/setup-mpi@v1
-        with:
-          mpi: intelmpi
-      - name: Check MPI
+      - name: Checkout HDF5
+        uses: actions/checkout@v4
+      - name: Set oneAPI
+        shell: cmd
         run: |
-          cmd /c 'C:\Program Files (x86)\Intel\oneAPI\compiler\2023.2.0\env\vars.bat'
-          dir 'C:\Program Files (x86)\Intel\oneAPI\compiler\2023.2.0\windows\bin\'
-          cmd /c 'C:\Program Files (x86)\Intel\oneAPI\mpi\2021.10.0\env\vars.bat'
-          dir 'C:\Program Files (x86)\Intel\oneAPI\mpi\2021.10.0\bin\'
-      - name: Test HDF5
-        env:
-          FC: ${{ steps.setup-fortran.outputs.fc }}
-          CC: ${{ steps.setup-fortran.outputs.cc }}
+          "C:\Program Files (x86)\Intel\oneAPI\setvars.bat"
+      - name: Configure & Build & Test
+        shell: cmd
         run: |
-          cmd /c 'C:\Program Files (x86)\Intel\oneAPI\compiler\2023.2.0\env\vars.bat'
-          cmd /c 'C:\Program Files (x86)\Intel\oneAPI\mpi\2021.10.0\env\vars.bat'
-          Get-ChildItem env:
-          $env:MPI_HOME="C:\Program Files (x86)\Intel\oneAPI\mpi\2021.10.0"
-          $env:I_MPI_ROOT="C:\Program Files (x86)\Intel\oneAPI\mpi\2021.10.0"
-          Get-ChildItem env:
-          git clone https://github.com/HDFGroup/hdf5.git
           cd hdf5
           mkdir build
           cd build
-          cmake -G Ninja `
-          -DCMAKE_C_COMPILER="C:/Program Files (x86)/Intel/oneAPI/compiler/2023.2.0/windows/bin/icx.exe" `
-          -DCMAKE_CXX_COMPILER="C:/Program Files (x86)/Intel/oneAPI/compiler/2023.2.0/windows/bin/icx.exe" `
-          -DBUILD_SHARED_LIBS:BOOL = OFF `
-          -DHDF5_BUILD_FORTRAN:BOOL=ON `
-          -DHDF5_ENABLE_Z_LIB_SUPPORT:BOOL=OFF `
-          -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF  `
-          ..
+          cmake -G Ninja -DCMAKE_C_COMPILER="C:/Program Files (x86)/Intel/oneAPI/compiler/2023.2.0/windows/bin/icx.exe" -DCMAKE_Fortran_COMPILER="C:/Program Files (x86)/Intel/oneAPI/compiler/2023.2.0/windows/bin/ifx.exe" -DHDF5_BUILD_FORTRAN:BOOL=ON -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF -DHDF5_ENABLE_Z_LIB_SUPPORT:BOOL=OFF  -DBUILD_SHARED_LIBS:BOOL=OFF ..
           ninja
           ninja test
