ci: checkout hdf5

--- a/.github/workflows/win-icx-ifx.yml
+++ b/.github/workflows/win-icx-ifx.yml
@@ -21,8 +21,6 @@ jobs:
         with:
           compiler: intel
           version: '2023.2'
-      - name: Checkout HDF5
-        uses: actions/checkout@v4
       - name: Set oneAPI
         shell: cmd
         run: |
@@ -30,6 +28,7 @@ jobs:
       - name: Configure & Build & Test
         shell: cmd
         run: |
+          git clone https://github.com/HDFgroup/hdf5.git
           cd hdf5
           mkdir build
           cd build
