--- a/.github/workflows/msys2.yml
+++ b/.github/workflows/msys2.yml
@@ -16,12 +16,13 @@ jobs:
           - clang64
     runs-on: windows-latest
     steps:
-      - name: Test MSYS2
+      - name: Setup MSYS2
         uses: msys2/setup-msys2@v2
         with:
           msystem: ${{matrix.sys}}
           update: true
           install: >-
+            toolchain
             curl
             git
             cmake
