ci: test only mingw64

--- a/.github/workflows/msys2.yml
+++ b/.github/workflows/msys2.yml
@@ -11,8 +11,8 @@ jobs:
       matrix:
         sys:
           - mingw64
-          - mingw32
-          - ucrt64
+#          - mingw32
+#          - ucrt64
 #          - clang64
     runs-on: windows-latest
     steps:
