--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -91,8 +91,8 @@ jobs:
 
     - name: Build
       run: cmake --build .
-      working-directory: ${{ runner.workspace }}/build
+      working-directory: ${{ runner.workspace }}/hdf5/build
 
     - name: Test
       run: ctest --build . -V
-      working-directory: ${{ runner.workspace }}/build
+      working-directory: ${{ runner.workspace }}/hdf5/build
