--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         repository: hyoklee/hdf5
         path: ./hdf5
-    - name: Configure
+    - name: Test HDF5
       run: |
         mkdir ./hdf5/build
         cd ./hdf5/build
@@ -87,12 +87,6 @@ jobs:
         -DUSE_LIBAEC_STATIC:BOOL=OFF \
         -DZLIB_USE_EXTERNAL:BOOL=OFF \
         ..
+      cmake --build .
+      ctest --build . -V
       shell: bash
-
-    - name: Build
-      run: cmake --build .
-      working-directory: ${{ runner.workspace }}/hdf5/build
-
-    - name: Test
-      run: ctest --build . -V
-      working-directory: ${{ runner.workspace }}/hdf5/build
