ci: build static only

--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -30,9 +30,9 @@ jobs:
         -DCMAKE_XCODE_ATTRIBUTE_ONLY_ACTIVE_ARCH=NO \
         -DCMAKE_XCODE_ATTRIBUTE_CODE_SIGNING_REQUIRE=NO \
         -DCMAKE_IOS_INSTALL_COMBINED=YES \
-        -DBUILD_SHARED_LIBS:BOOL=ON \
-        -DBUILD_STATIC_EXECS:BOOL=OFF \
-        -DBUILD_STATIC_LIBS:BOOL=OFF \
+        -DBUILD_SHARED_LIBS:BOOL=OFF \
+        -DBUILD_STATIC_EXECS:BOOL=ON \
+        -DBUILD_STATIC_LIBS:BOOL=ON \
         -DBUILD_SZIP_WITH_FETCHCONTENT:BOOL=OFF \
         -DBUILD_TESTING:BOOL=OFF \
         -DBUILD_USER_DEFINED_LIBS:BOOL=OFF \
