--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -34,7 +34,7 @@ jobs:
         -DBUILD_STATIC_EXECS:BOOL=ON \
         -DBUILD_STATIC_LIBS:BOOL=ON \
         -DBUILD_SZIP_WITH_FETCHCONTENT:BOOL=OFF \
-        -DBUILD_TESTING:BOOL=ON \
+        -DBUILD_TESTING:BOOL=OFF \
         -DBUILD_USER_DEFINED_LIBS:BOOL=OFF \
         -DBUILD_ZLIB_WITH_FETCHCONTENT:BOOL=OFF \
         -DHDF5_BATCH_H5DETECT:BOOL=OFF \
@@ -48,7 +48,7 @@ jobs:
         -DHDF5_BUILD_HL_LIB:BOOL=OFF \
         -DHDF5_BUILD_JAVA:BOOL=OFF \
         -DHDF5_BUILD_PARALLEL_TOOLS:BOOL=OFF \
-        -DHDF5_BUILD_TOOLS:BOOL=OFF \
+        -DHDF5_BUILD_TOOLS:BOOL=ON \
         -DHDF5_BUILD_UTILS:BOOL=OFF \
         -DHDF5_BUILD_WITH_INSTALL_NAME:BOOL=OFF \
         -DHDF5_DIMENSION_SCALES_NEW_REF:BOOL=OFF \
