--- a/.github/workflows/vos.yml
+++ b/.github/workflows/vos.yml
@@ -23,7 +23,9 @@ jobs:
       run: |
         mkdir ./hdf5/build
         cd ./hdf5/build
-        cmake ..
+        cmake -GXcode \
+        -DCMAKE_SYSTEM_NAME=visionOS \
+        -DCMAKE_OSX_ARCHITECTURES=arm64 ..
   build_with_15_SIMULATOR64:
     name: "Xcode version 15.0.0, Target visionOS Simulator [x86_64] Target SDK 1.0"
     runs-on: macos-13
