--- a/.github/workflows/vos.yml
+++ b/.github/workflows/vos.yml
@@ -15,6 +15,7 @@ jobs:
     - uses: actions/checkout@v4
       with:
         repository: hyoklee/hdf5
+        path: ./hdf5
     - uses: maxim-lobanov/setup-xcode@v1
       with:
         xcode-version: '15.0'
@@ -45,7 +46,8 @@ jobs:
       run: |
         mkdir ./hdf5/build
         cd ./hdf5/build
-        cmake ..
+        cmake -GXcode \
+        -DCMAKE_SYSTEM_NAME=visionOS ..
   build_with_15_SIMULATOR_VISIONOS:
     name: "Xcode version 15.0.0, Target visionOS Simulator [arm64] Target SDK 1.0"
     runs-on: macos-13
@@ -53,7 +55,10 @@ jobs:
       PLATFORM: SIMULATOR_VISIONOS
       DEPLOYMENT_TARGET: 1.0
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
+      with:
+        repository: hyoklee/hdf5
+        path: ./hdf5
     - uses: maxim-lobanov/setup-xcode@v1
       with:
         xcode-version: '15.0'
@@ -62,4 +67,5 @@ jobs:
       run: |
         mkdir ./hdf5/build
         cd ./hdf5/build
-        cmake ..
+        cmake -GXcode \
+        -DCMAKE_SYSTEM_NAME=visionOS ..
