--- a/.github/workflows/vos.yml
+++ b/.github/workflows/vos.yml
@@ -12,6 +12,12 @@ jobs:
       PLATFORM: VISIONOS
       DEPLOYMENT_TARGET: 1.0
     steps:
+    - name: Setup cmake
+      uses: jwlawson/actions-setup-cmake@v1.14
+      with:
+        cmake-version: '3.28.x'
+    - name: Use cmake
+      run: cmake --version
     - uses: actions/checkout@v4
       with:
         repository: hyoklee/hdf5
