--- a/.github/workflows/vos.yml
+++ b/.github/workflows/vos.yml
@@ -40,6 +40,12 @@ jobs:
       PLATFORM: SIMULATOR64_VISIONOS
       DEPLOYMENT_TARGET: 1.0
     steps:
+    - name: Setup cmake
+      uses: jwlawson/actions-setup-cmake@v1.14
+      with:
+        cmake-version: '3.28.x'
+    - name: Use cmake
+      run: cmake --version    
     - uses: actions/checkout@v4
       with:
         repository: hyoklee/hdf5
@@ -61,6 +67,12 @@ jobs:
       PLATFORM: SIMULATOR_VISIONOS
       DEPLOYMENT_TARGET: 1.0
     steps:
+    - name: Setup cmake
+      uses: jwlawson/actions-setup-cmake@v1.14
+      with:
+        cmake-version: '3.28.x'
+    - name: Use cmake
+      run: cmake --version    
     - uses: actions/checkout@v4
       with:
         repository: hyoklee/hdf5
