--- a/.github/workflows/vos.yml
+++ b/.github/workflows/vos.yml
@@ -28,6 +28,8 @@ jobs:
     - name: Build
       continue-on-error: true
       run: |
+        brew install xcodesorg/made/xcodes
+        xcodes runtimes install 'visionOS 1.0 Beta 2'
         mkdir ./hdf5/build
         cd ./hdf5/build
         cmake -GXcode \
