--- a/.github/workflows/vos.yml
+++ b/.github/workflows/vos.yml
@@ -29,6 +29,7 @@ jobs:
       continue-on-error: true
       run: |
         brew install xcodesorg/made/xcodes
+        xcodebuild -downloadPlatform visionOS
         xcodes runtimes
         xcodes runtimes install visionOS
         mkdir ./hdf5/build
@@ -55,7 +56,7 @@ jobs:
         path: ./hdf5
     - uses: maxim-lobanov/setup-xcode@v1
       with:
-        xcode-version: '15.1-beta'
+        xcode-version: latest
     - name: Build
       continue-on-error: true
       run: |
@@ -82,7 +83,7 @@ jobs:
         path: ./hdf5
     - uses: maxim-lobanov/setup-xcode@v1
       with:
-        xcode-version: '15.1-beta.3'
+        xcode-version: latest
     - name: Build
       continue-on-error: true
       run: |
