--- a/.github/workflows/vos.yml
+++ b/.github/workflows/vos.yml
@@ -29,7 +29,7 @@ jobs:
       continue-on-error: true
       run: |
         brew install xcodesorg/made/xcodes
-        xcodebuild -downloadAllPlatform
+        xcodebuild -downloadAllPlatforms
         xcodes runtimes
         xcodes runtimes install visionOS
         mkdir ./hdf5/build
