--- a/.github/workflows/win-setup4.yml
+++ b/.github/workflows/win-setup4.yml
@@ -3,7 +3,7 @@ name: win mpicc mpiifort 4
 on:
   push:
     branches:
-      - main-
+      - main
 
 jobs:
   build:
@@ -37,7 +37,7 @@ jobs:
       - name: Set MPI
         shell: cmd
         run: |
-          "C:\Program Files (x86)\Intel\oneAPI\mpi\2021.10.0\env\vars.bat"
+          "C:\Program Files (x86)\Intel\oneAPI\mpi\2021.11.0\env\vars.bat"
       - name: Configure & Build
         shell: cmd
         run: |
@@ -45,7 +45,7 @@ jobs:
           cd hdf5
           mkdir build
           cd build
-          cmake -G Ninja -DCMAKE_C_COMPILER="C:/Program Files (x86)/Intel/oneAPI/mpi/2021.10.0/bin/mpicc.bat" -DCMAKE_Fortran_COMPILER="C:/Program Files (x86)/Intel/oneAPI/mpi/2021.10.0/bin/mpiifort.bat" -DHDF5_BUILD_FORTRAN:BOOL=ON -DHDF5_ENABLE_PARALLEL:BOOL=ON -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF ..
+          cmake -G Ninja -DCMAKE_C_COMPILER="C:/Program Files (x86)/Intel/oneAPI/mpi/2021.11.0/bin/mpicc.bat" -DCMAKE_Fortran_COMPILER="C:/Program Files (x86)/Intel/oneAPI/mpi/2021.11.0/bin/mpiifort.bat" -DHDF5_BUILD_FORTRAN:BOOL=ON -DHDF5_ENABLE_PARALLEL:BOOL=ON -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF ..
           ninja
       - name: Test
         shell: cmd
