--- a/.github/workflows/mac14-xcode.yml
+++ b/.github/workflows/mac14-xcode.yml
@@ -3,7 +3,7 @@ name: mac14 Xcode
 on:
   workflow_dispatch:
   push:
-    branches: [ develop ]
+    branches: [ main ]
 
 jobs:
   build:
@@ -22,11 +22,11 @@ jobs:
       - name: Read base-name file
         id: gethdf5base
         run: |
-          echo "HDF5_NAME_BASE=$(cat last-file.txt).tar.gz"
+          echo "HDF5_NAME_BASE=$(cat last-file.txt)"
           echo $HDF5_NAME_BASE
-          wget https://github.com/HDFGroup/hdf5/releases/download/snapshot/$HDF5_NAME_BASE
-          tar zxvf $HDF5_NAME_BASE
-      - run: echo "hdf5 base name is ${{ steps.gethdf5base.outputs.HDF5_NAME_BASE }}."
+          wget https://github.com/HDFGroup/hdf5/releases/download/snapshot/$HDF5_NAME_BASE.tar.gz
+          tar zxvf $HDF5_NAME_BASE.tar.gz
+          ls
 
       - name: Generate Xcode project
         run: |
