fix: use github_env

--- a/.github/workflows/abi.yml
+++ b/.github/workflows/abi.yml
@@ -24,7 +24,14 @@ jobs:
         run: |
           wget https://github.com/HDFGroup/hdf5/releases/download/snapshot/last-file.txt
           cat last-file.txt
-          echo "HDF5_NAME_BASE=$(cat last-file.txt)"
-          echo $HDF5_NAME_BASE
+          echo "HDF5_NAME_BASE=$(cat last-file.txt)" >> $GITHUB_ENV
+      - name: Use the variable in a subsequent step
+        env:
+          H5: $HDF5_NAME_BASE
+        run: |
+          echo $H5
+          wget https://github.com/HDFGroup/hdf5/releases/download/snapshot/$H5.tar.gz
+          tar zxvf $H5.tar.gz
+          ls
           wget https://github.com/HDFGroup/hdf5/releases/download/snapshot/$HDF5_NAME_BASE.tar.gz
           tar zxvf $HDF5_NAME_BASE.tar.gz
