--- a/.github/workflows/abi.yml
+++ b/.github/workflows/abi.yml
@@ -24,10 +24,10 @@ jobs:
         run: |
           wget https://github.com/HDFGroup/hdf5/releases/download/snapshot/last-file.txt
           cat last-file.txt
-          echo "HDF5_NAME_BASE=$(cat last-file.txt)" >> $GITHUB_ENV
+          echo "HDF5_NAME_BASE=$(cat last-file.txt)" >> $GITHUB_OUTPUT
       - name: Use the variable in a subsequent step
         env:
-          H5: $HDF5_NAME_BASE
+          H5: ${{ steps.gethdf5base.outputs.HDF5_NAME_BASE }}
         run: |
           echo $H5
           wget https://github.com/HDFGroup/hdf5/releases/download/snapshot/$H5.tar.gz
