--- a/.github/workflows/mac14-xcode.yml
+++ b/.github/workflows/mac14-xcode.yml
@@ -22,10 +22,10 @@ jobs:
       - name: Read base-name file
         id: gethdf5base
         run: |
-          echo "HDF5_NAME_BASE=$(cat last-file.txt)" >> $GITHUB_ENV
+          echo "HDF5_NAME_BASE=$(cat last-file.txt)" >> $GITHUB_OUTPUT
       - name: Use the variable in a subsequent step
         env:
-          H5: $HDF5_NAME_BASE
+          H5: ${{ steps.gethdf5base.outputs.HDF5_NAME_BASE }}
         run: |
           echo $H5
           wget https://github.com/HDFGroup/hdf5/releases/download/snapshot/$H5.tar.gz
