--- a/.github/workflows/mac14-xcode.yml
+++ b/.github/workflows/mac14-xcode.yml
@@ -34,6 +34,9 @@ jobs:
 
       - name: Generate Xcode project
         run: |
+          pwd
+          ls
+          cd hdfsrc
           export OPENSSL_ROOT_DIR=/usr/local/Cellar/openssl@3/3.1.1
           mkdir build
           cd build
