--- a/.github/workflows/abi.yml
+++ b/.github/workflows/abi.yml
@@ -44,6 +44,8 @@ jobs:
           abi-dumper hdf5/HDF5-1.15.0.365e233-Linux/HDF_Group/HDF5/1.15.0.365e233/lib/libhdf5.so -o ABI-1.dump -public-headers hdf5/HDF5-1.15.0.365e233-Linux/HDF_Group/HDF5/1.15.0.365e233/include
           ls
           abi-compliance-checker -l HDF5-1.14.4  -old ABI-0.dump -new ABI-1.dump
+        continue-on-error: true
+
       - name: Save output as artifact
         uses: actions/upload-artifact@v3
         with:
