--- a/.github/workflows/abi_c.yml
+++ b/.github/workflows/abi_c.yml
@@ -7,17 +7,17 @@ on:
         description: 'Previous Release Version'
         type: string
         required: true
-        default: 14.3
+        default: '14.3'
       new:
         description: 'New Release Version'
         type: string
         required: true
-        default: 14.4
+        default: '14.4'
       dev:
         description: 'Develop Version'
         type: string
         required: true
-        default: 15.0        
+        default: '15.0'
 
 permissions:
   contents: read
@@ -30,6 +30,7 @@ jobs:
     steps:
       - name: Install System dependencies
         run: |
+          echo ${{ inputs.old }}
           sudo apt update
           sudo apt install -y abi-compliance-checker abi-dumper
       - name: Download previous version
