--- a/.github/workflows/abi_c.yml
+++ b/.github/workflows/abi_c.yml
@@ -32,11 +32,11 @@ jobs:
         run: |
           echo ${{ inputs.old }}
           sudo apt update
-          sudo apt install -y abi-compliance-checker abi-dumper
+          sudo apt install -q -y abi-compliance-checker abi-dumper jabi-compliance-checker
       - name: Download previous version
         run: |
           echo ${{ inputs.old }}
-          wget https://github.com/HDFGroup/hdf5/releases/download/hdf5-1_14_3/hdf5-1_14_3-ubuntu-2204.tar.gz
+          wget -q https://github.com/HDFGroup/hdf5/releases/download/hdf5-1_14_3/hdf5-1_14_3-ubuntu-2204.tar.gz
           tar zxvf hdf5-1_14_3-ubuntu-2204.tar.gz
           find .
           cd hdf5
