--- a/.github/workflows/abi_c.yml
+++ b/.github/workflows/abi_c.yml
@@ -75,4 +75,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: output-file
-          path: compat_reports/HDF5-1.14.4/X_to_Y/compat_report.html
+          path: |
+	    compat_reports/HDF5-1.14.4/X_to_Y/compat_report.html
+            compat_reports/jarhdf5-/1.14.3_to_1.15.0/compat_report.html
+	    
