ci: parameterize everything

--- a/.github/workflows/abi_c.yml
+++ b/.github/workflows/abi_c.yml
@@ -3,21 +3,26 @@ name: ABI C
 on:
   workflow_call:
     inputs:
-      old:
-        description: 'Previous Release Version'
+      y0:
+        description: 'Release Minor Version'
         type: string
         required: true
-        default: '14.3'
-      new:
-        description: 'New Release Version'
+        default: '14'
+      y1:
+        description: 'Develop Minor Version'
         type: string
         required: true
-        default: '14.4'
-      dev:
-        description: 'Develop Version'
+        default: '15'
+      z0:
+        description: 'Previous Release Patch Version'
         type: string
         required: true
-        default: '15.0'
+        default: '3'
+      z1:
+        description: 'New Release Patch Version'
+        type: string
+        required: true
+        default: '4'
 
 permissions:
   contents: read
@@ -30,45 +35,47 @@ jobs:
     steps:
       - name: Install System dependencies
         run: |
-          echo ${{ inputs.old }}
           sudo apt update
           sudo apt install -q -y abi-compliance-checker abi-dumper
           sudo apt install -q -y japi-compliance-checker
       - name: Download previous version
         run: |
-          echo ${{ inputs.old }}
-          wget -q https://github.com/HDFGroup/hdf5/releases/download/hdf5-1_14_3/hdf5-1_14_3-ubuntu-2204.tar.gz
-          tar zxvf hdf5-1_14_3-ubuntu-2204.tar.gz
+          wget -q https://github.com/HDFGroup/hdf5/releases/download/hdf5-1_14_3/hdf5-1_${{ inputs.y0 }}_${{ inputs.z0 }}-ubuntu-2204.tar.gz
+          tar zxvf hdf5-1_${{ inputs.y0 }}_${{ inputs.z0 }}-ubuntu-2204.tar.gz
           find .
           cd hdf5
-          tar zxvf HDF5-1.${{ inputs.old }}-Linux.tar.gz
+          tar zxvf HDF5-1.${{ inputs.y0 }}.${{ inputs.z0 }}-Linux.tar.gz
       - name: Get snapshot hash
-        id: gethdf5base
+        id: get_hash
         run: |
           wget https://github.com/HDFGroup/hdf5/releases/download/snapshot/last-file.txt
           cat last-file.txt
-          echo "HDF5_NAME_BASE=$(cat last-file.txt)" >> $GITHUB_OUTPUT
+          echo "HASH=$(cat last-file.txt | cut -d '-' -f3)" >> $GITHUB_OUTPUT
       - name: Download snapshot
         env:
-          H5: ${{ steps.gethdf5base.outputs.HDF5_NAME_BASE }}
+          h: ${{ steps.get_hash.outputs.HASH }}
         run: |
-          echo $H5
+          echo $h
           wget https://github.com/HDFGroup/hdf5/releases/download/snapshot/$H5-ubuntu-2204_gcc.tar.gz
-          tar zxvf $H5-ubuntu-2204_gcc.tar.gz
+          tar zxvf hdf5-develop-$H5-ubuntu-2204_gcc.tar.gz
           find .
           cd hdf5
-          tar zxvf HDF5-1.15.0.365e233-Linux.tar.gz
+          tar zxvf HDF5-1.${{ inputs.y1 }}.0.$h-Linux.tar.gz
 
       - name: Run Java API report
+        env:
+          h: ${{ steps.get_hash.outputs.HASH }}
         run: |
-          japi-compliance-checker hdf5/HDF5-1.14.3-Linux/HDF_Group/HDF5/1.14.3/lib/jarhdf5-1.14.3.jar hdf5/HDF5-1.15.0.365e233-Linux/HDF_Group/HDF5/1.15.0.365e233/lib/jarhdf5-1.15.0.jar
+          japi-compliance-checker hdf5/HDF5-1.${{ inputs.y0 }}.${{ inputs.z0 }}-Linux/HDF_Group/HDF5/1.${{ inputs.y0 }}.${{ inputs.z0 }}/lib/jarhdf5-1.${{ inputs.y0 }}.${{ inputs.z0 }}.jar hdf5/HDF5-1.${{ inputs.y1 }}.0.$h-Linux/HDF_Group/HDF5/1.${{ inputs.y1 }}.0.$h/lib/jarhdf5-1.${{ inputs.y1 }}.0.jar
 
       - name: Run ABI report
+        env:
+          h: ${{ steps.get_hash.outputs.HASH }}
         run: |
-          abi-dumper hdf5/HDF5-1.14.3-Linux/HDF_Group/HDF5/1.14.3/lib/libhdf5.so -o ABI-0.dump -public-headers hdf5/HDF5-1.14.3-Linux/HDF_Group/HDF5/1.14.3/include
-          abi-dumper hdf5/HDF5-1.${{ inputs.dev }}.365e233-Linux/HDF_Group/HDF5/1.15.0.365e233/lib/libhdf5.so -o ABI-1.dump -public-headers hdf5/HDF5-1.15.0.365e233-Linux/HDF_Group/HDF5/1.15.0.365e233/include
+          abi-dumper hdf5/HDF5-1.${{ inputs.y0 }}.${{ inputs.z0 }}-Linux/HDF_Group/HDF5/1.${{ inputs.y0 }}.${{ inputs.z0 }}/lib/libhdf5.so -o ABI-0.dump -public-headers hdf5/HDF5-1.${{ inputs.y0 }}.${{ inputs.z0 }}-Linux/HDF_Group/HDF5/1.${{ inputs.y0 }}.${{ inputs.z0 }}/include
+          abi-dumper hdf5/HDF5-1.${{ inputs.y1 }}.0.$h-Linux/HDF_Group/HDF5/1.${{ inputs.y1 }}.0.$h/lib/libhdf5.so -o ABI-1.dump -public-headers hdf5/HDF5-1.${{ inputs.y1 }}.0.$h-Linux/HDF_Group/HDF5/1.${{ inputs.y1 }}.0.$h/include
           ls
-          abi-compliance-checker -l HDF5-1.14.4  -old ABI-0.dump -new ABI-1.dump
+          abi-compliance-checker -l HDF5-1.${{ inputs.y0 }}.${{ inputs.z1 }}  -old ABI-0.dump -new ABI-1.dump
         continue-on-error: true
 
       - name: Save output as artifact
@@ -76,5 +83,5 @@ jobs:
         with:
           name: output-file
           path: |
-            compat_reports/HDF5-1.14.4/X_to_Y/compat_report.html
-            compat_reports/jarhdf5-/1.14.3_to_1.15.0/compat_report.html
+            compat_reports/HDF5-1.${{ inputs.y0 }}.${{ inputs.z1 }}/X_to_Y/compat_report.html
+            compat_reports/jarhdf5-/1.${{ inputs.y0 }}.${{ inputs.z0 }}_to_1.${{ inputs.y1 }}.0/compat_report.html
