ci: test submit

--- a/.github/workflows/mac14-xcode.yml
+++ b/.github/workflows/mac14-xcode.yml
@@ -3,7 +3,7 @@ name: mac14 Xcode
 on:
   workflow_dispatch:
   push:
-    branches: [ main- ]
+    branches: [ main ]
 
 jobs:
   build:
@@ -40,7 +40,9 @@ jobs:
           export OPENSSL_ROOT_DIR=/usr/local/Cellar/openssl@3/3.1.1
           mkdir build
           cd build
-          cmake -DHDF5_ENABLE_ROS3_VFD:BOOL=ON -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF -G Xcode ..
+          cmake -D CTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DHDF5_ENABLE_ROS3_VFD:BOOL=ON -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF -G Xcode ..
           cmake --build . --config Debug
           ctest --build . -C Debug
+          ctest -T Test
+          ctest -T Submit
           sudo cmake -DCMAKE_INSTALL_PREFIX=/usr/local -DCMAKE_INSTALL_CONFIG_NAME=Debug -P cmake_install.cmake
