--- a/.github/workflows/mac14.yml
+++ b/.github/workflows/mac14.yml
@@ -3,7 +3,7 @@ name: mac14 Xcode
 on:
   workflow_dispatch:
   push:
-    branches: [ main- ]
+    branches: [ main ]
 
 jobs:
   build:
@@ -32,17 +32,14 @@ jobs:
           tar zxvf $H5.tar.gz
           ls
 
-      - name: Generate Xcode project
+      - name: Build Ninja
         run: |
           pwd
           ls
           cd hdfsrc
-          export OPENSSL_ROOT_DIR=/usr/local/Cellar/openssl@3/3.1.1
           mkdir build
           cd build
-          cmake -D CTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DHDF5_ENABLE_ROS3_VFD:BOOL=ON -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF -G Xcode ..
-          cmake --build . --config Debug
-          ctest --build . -C Debug
-          ctest -T Test
+          cmake -D CTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF -G Ninja ..
+          ctest -T Build --output-on-error -j
+          ctest -T Test --output-on-error -j
           ctest -T Submit
-          sudo cmake -DCMAKE_INSTALL_PREFIX=/usr/local -DCMAKE_INSTALL_CONFIG_NAME=Debug -P cmake_install.cmake
