--- a/.github/workflows/mac14.yml
+++ b/.github/workflows/mac14.yml
@@ -1,4 +1,4 @@
-name: mac14 Xcode
+name: mac14
 
 on:
   workflow_dispatch:
@@ -39,7 +39,7 @@ jobs:
           cd hdfsrc
           mkdir build
           cd build
-          cmake -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF -G Ninja ..
+          cmake -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF  ..
           ctest -T Build --output-on-error -j
           ctest -T Test --output-on-error -j
           ctest -T Submit
