--- a/.github/workflows/mac14.yml
+++ b/.github/workflows/mac14.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    name: Generate Xcode project
+    name: Test snapshot
     runs-on: macos-14
     steps:
       - uses: actions/checkout@v4.1.1
@@ -39,7 +39,10 @@ jobs:
           cd hdfsrc
           mkdir build
           cd build
-          cmake -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF  ..
+          cmake \
+          -D SITE:STRING=mac14 \
+          -D CTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
+          ..
           ctest -T Build --output-on-error -j
           ctest -T Test --output-on-error -j
           ctest -T Submit
